Default initialize LSI inside parent allocator

Currently, the ParentLocalSurfaceIdAllocator default initializes with an
invalid last-known LocalSurfaceId. However, this has no real use or
benefit.

Clients often have to check if the last-known LocalSurfaceId is not
valid before forcing the initial allocation via GenerateId().

It would make sense for the ParentLocalSurfaceIdAllocator to default
initialize with a generated LocalSurfaceId. This patch does that.

BUG=837030

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I58c7c8af8c338675d901fa9d99e0bc157d58e935
Reviewed-on: https://chromium-review.googlesource.com/1036598
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Chris Blume <cblume@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554973}
Former-commit-id: 387823429f16759f283bddac0ecb74a3d77bb532